--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,29 @@
     <link rel="stylesheet" href="css/style.min.css">
     <title>Dart service manager</title>
 </head>
-<body>
+<body class="body">
     <div class="header">
         <div class="container">
             <div class="header__inner">
-                <div class="header__logo">
-                    <a href="#"><img src="icons/logo.png" alt="logo"></a>
+                <div class="logo">
+                    <a href="#" class="logo__link">
+                        <img src="icons/logo.png" alt="logo" class="logo__img">
+                    </a>
                 </div>
-                <nav class="nav">
-                    <a class="nav__link" href="#">Home</a>
-                    <a class="nav__link" href="#">Service</a>
-                    <a class="nav__link" href="#">Extension</a>
-                    <a class="nav__link" href="#">Pricing</a>
-                    <a class="nav__link" href="#">Help</a>
-                </nav>
+                <div class="header__toggle">
+                    <nav class="nav">
+                        <a class="nav__link" href="#">Home</a>
+                        <a class="nav__link" href="#">Service</a>
+                        <a class="nav__link" href="#">Extension</a>
+                        <a class="nav__link" href="#">Pricing</a>
+                        <a class="nav__link" href="#">Help</a>
+                        <div class="header__close">&times;</div>
+                    </nav>
+                </div>
                 <a class="header__btn" href="#">sign up</a>
+                <div class="header__burger">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
             </div>
         </div>
     </div>
@@ -41,7 +49,7 @@
                     </div>
                     <div class="promo__video">
                         <div class="promo__video-content">
-                            <div class="promo__video-block">
+                            <div class="promo__video-block promo__video-block_active">
                                 <div class="promo__video-play">&#9658;</div>
                             </div>
                             <div class="promo__video-text">Watch the video</div>
@@ -394,78 +402,63 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="team__slider">
-                    <div class="team__slide">
-                        <div class="team__slide-content">
-                            <div class="team__slide-photo">
-                                <img src="img/team_1.png" alt="team_photo_1">
-                            </div>
-                            <div class="team__slide-name">Sophie Turner</div>
-                            <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
-                            <div class="team__slide-social">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                <i class="fa fa-behance" aria-hidden="true"></i>
-                            </div>
-                        </div>
+            </div>
+        </div>
+        <div class="contacts">
+            <div class="contacts__wrapper">
+                <div class="block-title block-title_center">Contact Uss</div>
+                <div class="block-description block-description_center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</div>
+                <form action="#" class="form">
+                    <input name="feedname" placeholder="First Name" type="text" class="form__input">
+                    <input name="feedsurname" placeholder="Last Name" type="text" class="form__input">
+                    <input name="email" placeholder="Email" type="email" class="form__input">
+                    <input name="phone" placeholder="Phone" class="form__input">
+                    <textarea name="textarea" placeholder="Message" class="form__textarea"></textarea>
+                    <div class="form__block">
+                        <input name="vehicle1" type="checkbox" value="Subscribe" id="checkbox" class="form__checkbox"><br>
+                        <label for="#checkbox">subscribe to the newsletter</label>
                     </div>
-
-                    <div class="team__slide">
-                        <div class="team__slide-content">
-                            <div class="team__slide-photo">
-                                <img src="img/team_1.png" alt="team_photo_1">
-                            </div>
-                            <div class="team__slide-name">Sophie Turner</div>
-                            <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
-                            <div class="team__slide-social">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                <i class="fa fa-behance" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="team__slide">
-                        <div class="team__slide-content">
-                            <div class="team__slide-photo">
-                                <img src="img/team_1.png" alt="team_photo_1">
-                            </div>
-                            <div class="team__slide-name">Sophie Turner</div>
-                            <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
-                            <div class="team__slide-social">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                <i class="fa fa-behance" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="team__slide">
-                        <div class="team__slide-content">
-                            <div class="team__slide-photo">
-                                <img src="img/team_1.png" alt="team_photo_1">
-                            </div>
-                            <div class="team__slide-name">Sophie Turner</div>
-                            <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
-                            <div class="team__slide-social">
-                                <i class="fa fa-twitter" aria-hidden="true"></i>
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                <i class="fa fa-behance" aria-hidden="true"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+                    <button class="btn btn_green btn_form">send</button>
+                </form>
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__up">
+                <div class="logo">
+                    <a href="#"><img src="icons/logo.png" alt="logo"></a>
+                </div>
+                <nav class="nav">
+                    <a class="nav__link" href="#">Home</a>
+                    <a class="nav__link" href="#">Service</a>
+                    <a class="nav__link" href="#">Extension</a>
+                    <a class="nav__link" href="#">Pricing</a>
+                    <a class="nav__link" href="#">Help</a>
+                </nav>
+            </div>
+            <div class="footer__down">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Privecy Policy</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">About Us</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">About Us</a>
+                    </li>
+                </ul>
+                <div class="social">
+                    <a href="#" class="social__link"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#" class="social__link"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#" class="social__link"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="#" class="social__link"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                    <a href="#" class="social__link"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
