--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
     <meta name="title" content="Dart service manager — lorem Ipsum Dolor">
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamc
     laboris nisi ut aliquip ex ea commodo consequat.">
-    <!-- Primary Meta Tags -->
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
@@ -26,13 +25,14 @@
     laboris nisi ut aliquip ex ea commodo consequat.">
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <main>
-        <div class="promo">
+        <div class="promo" id="up">
             <div class="container">
                 <div class="promo__wrapper">
                     <div class="promo__information">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="easy">
+        <div class="easy animate__fadeInUp wow" data-wow-offset="10" data-wow-duration="1.5s" data-wow-delay="0s">
             <div class="container">
                 <h2 class="block-title block-title_center">Easy & Useful</h2>
                 <div class="easy__subtitle">Project Management Tool</div>
@@ -119,7 +119,7 @@
                 </div>
                 <a class="btn btn_center btn_green btn_mb100" href="#">Get started</a>
             </div>
-            <div class="easy__blocks">
+            <div class="easy__blocks animate__fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="0s">
                 <div class="easy__block easy__block_light">
                     <div class="easy__content">
                         <div class="easy__round">
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <div class="services">
+        <div class="services animate__fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="0s">
             <div class="services__wrapper">
                 <div class="block-title block-title_center">Services</div>
                 <div class="block-description block-description_center">Lorem ipsum dolor sit amet,    consectetur  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud   
@@ -179,7 +179,7 @@
                         </div>
                         <div class="services__down">
                             <div class="services__img">
-                                <img src="img/service_img.png" alt="service">
+                                <img src="img/service_img(2).jpg" alt="service">
                             </div>
                             <div class="services__description">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -199,7 +199,7 @@
                         </div>
                         <div class="services__down">
                             <div class="services__img">
-                                <img src="img/service_img.png" alt="service">
+                                <img src="img/service_img(2).jpg" alt="service">
                             </div>
                             <div class="services__description">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="services__down">
                             <div class="services__img">
-                                <img src="img/service_img.png" alt="service">
+                                <img src="img/service_img(2).jpg" alt="service">
                             </div>
                             <div class="services__description">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -239,7 +239,7 @@
                         </div>
                         <div class="services__down">
                             <div class="services__img">
-                                <img src="img/service_img.png" alt="service">
+                                <img src="img/service_img(2).jpg" alt="service">
                             </div>
                             <div class="services__description">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -259,7 +259,7 @@
                         </div>
                         <div class="services__down">
                             <div class="services__img">
-                                <img src="img/service_img.png" alt="service">
+                                <img src="img/service_img(2).jpg" alt="service">
                             </div>
                             <div class="services__description">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -271,7 +271,7 @@
                 </div>
             </div>
         </div>
-        <div class="feedback">
+        <div class="feedback animate__fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="0s">
             <div class="container">
                 <div class="feedback__wrapper">
                     <div class="feedback__info">
@@ -354,7 +354,7 @@
                 </div>
             </div>
         </div>
-        <div class="team">
+        <div class="team animate__fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="0s">
             <div class="team__wrapper">
                 <div class="block-title block-title_center">Services</div>
                 <div class="block-description block-description_center">Lorem ipsum dolor sit amet, consectetur  adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div>
@@ -369,11 +369,11 @@
                                 <div class="team__slide-name">Sophie Turner</div>
                                 <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
                                 <div class="team__slide-social">
-                                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
+                                    <a class="team__link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -386,11 +386,11 @@
                                 <div class="team__slide-name">Sophie Turner</div>
                                 <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
                                 <div class="team__slide-social">
-                                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
+                                    <a class="team__link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -403,11 +403,11 @@
                                 <div class="team__slide-name">Sophie Turner</div>
                                 <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
                                 <div class="team__slide-social">
-                                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
+                                    <a class="team__link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -420,11 +420,11 @@
                                 <div class="team__slide-name">Sophie Turner</div>
                                 <div class="team__slide-feed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div>
                                 <div class="team__slide-social">
-                                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
+                                    <a class="team__link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                                    <a class="team__link" href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                 </div>
             </div>
         </div>
-        <div class="contacts">
+        <div class="contacts animate__fadeInUp wow" data-wow-duration="1.5s" data-wow-delay="0s">
             <div class="contacts__wrapper">
                 <div class="block-title block-title_center">Contact Uss</div>
                 <div class="block-description block-description_center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</div>
@@ -444,7 +444,7 @@
                     <textarea name="textarea" placeholder="Message" class="form__textarea"></textarea>
                     <div class="form__block">
                         <input name="vehicle1" type="checkbox" value="Subscribe" id="checkbox" class="form__checkbox"><br>
-                        <label for="#checkbox">subscribe to the newsletter</label>
+                        <label for="checkbox">subscribe to the newsletter</label>
                     </div>
                     <button class="btn btn_green btn_form">send</button>
                 </form>
@@ -487,9 +487,13 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <a href="#up" class="chevron">
+        <img src="icons/chevron-circle-up-solid.svg" alt="chevron">
+    </a>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
